[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
chrono = "0.4.19"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
